# mi-cho-coq

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  Makefile.local  README.md  README.org  comparable.v  configure  coq-mi-cho-coq.install  coq-mi-cho-coq.opam  error.v  map.v  mi-cho-coq.opam  semantics.v  set.v  syntax.v  tez.v
.github/workflows/: ci.yml
doc/: logo_tezos.tikz
doc/talk_01_14_2020_visit_cobra/: slides.org
doc/talk_08_09_2019_coq_workshop/: coq_workshop.org
doc/talk_11_10_2019_FMBC_workshop/: slides.org
doc/talk_12_03_2019_multisig_lightling_talk/: slides.org
doc/talk_14_02-2020_WTSC/: slides.org
doc/talk_15_10_2019_ledger_meetup/: talk_multisig.org
doc/talk_17_09_2018/: slides.org
doc/talk_17_09_2018_interview/: slides.org
doc/talk_20_05_2019/: slides.org
doc/talk_27_06_2019/: talk_multisig.org
doc/talk_27_06_2019_chainacc_training/: talk_multisig.org
doc/talk_30_01_2020_deducteam_seminar/: slides.org
scripts/: org-lint-README.el  org-lint-dummy.el
src/: Makefile  _CoqProject  comparable.v  macros.v  map.v  semantics.v  set.v  syntax.v  tez.v
src/contracts/: deposit.tz  manager.tz  vesting_tez.tz
src/contracts_coq/: boomerang.v  configure  contract_components.v  deposit.v  did_manager.v  did_manager_michelson.v  did_manager_michelson_string.v  did_manager_string.v  generic_multisig.v  manager.v  multisig.v  return_to_sender.v  spending_limit_contract_definition.v  spending_limit_contract_parsing.v  spending_limit_contract_string.v  spending_limit_contract_verification.v  tzprofiles.v  tzprofiles_list.v  tzprofiles_string.v  (+3 more)
(+68 files in other folders)
