opam-version: "2.0"
synopsis: "A specification of Michelson in Coq to prove properties about smart contracts in Tezos"
maintainer: "raphael.cauderlier@nomadic-labs.com"
authors: [ "Raphaël Cauderlier" "Bruno Bernardo" "Julien Tesson" "Arvid Jakobsson" ]

homepage: "https://gitlab.com/nomadic-labs/mi-cho-coq/"
dev-repo: "git+https://gitlab.com/nomadic-labs/mi-cho-coq/"
bug-reports: "https://gitlab.com/nomadic-labs/mi-cho-coq/issues"
license: "MIT"

build: [ [ "./configure" ] [ make ] ]
install: [ make "install" ]
remove: [
  [ "./configure" ]
  [ make "-C" "src/michocoq" "uninstall" ]
  [ make "-C" "src/michocott" "uninstall" ]
]
depends: [ "coq" {>= "8.8"} "coq-ott" "ott" ]
